Change container size on large screens in chocolates.html

--- a/chocolates/templates/chocolates/chocolates.html
+++ b/chocolates/templates/chocolates/chocolates.html
@@ -23,7 +23,7 @@
 </div>
 
 
-<div class="container-fluid col-12 col-md-8 col-lg-10 mt-2 mx-auto">
+<div class="container-fluid col-12 col-md-10 col-lg-8 col-xl-12 mt-2 mx-auto">
     <!-- First row contains page title and selected categories, from chocolates.html  -->
     <div class="row">
         <div class="col text-center mt-3 purple-text">
