--- a/static/css/base.css
+++ b/static/css/base.css
@@ -166,6 +166,13 @@ https://www.geeksforgeeks.org/how-to-create-fade-in-effect-on-page-load-using-cs
 
 
 .footer {
+
+    position: sticky;
+    top: 100vh;
+    left: 1%;
+    width: 98%;
+    font-size: .7rem;
+
     /* Background gradient effect generated from cssgradient.io */
     background: rgb(85, 27, 140);
     background: -moz-linear-gradient(153deg, rgba(85, 27, 140, 1) 34%, rgba(136, 43, 222, 1) 81%);
@@ -177,8 +184,7 @@ https://www.geeksforgeeks.org/how-to-create-fade-in-effect-on-page-load-using-cs
     color: white;
     height: 6rem;
     padding-top: .3rem;
-    padding-bottom: .3rem;
-    margin-top: 17rem !important;
+    margin-top: 6rem !important;
 }
 
 .footer-content {
@@ -187,16 +193,11 @@ https://www.geeksforgeeks.org/how-to-create-fade-in-effect-on-page-load-using-cs
     justify-content: space-evenly;
 }
 
-.footer-content i {
-    font-size: 1.4rem;
-}
 
 .footer-socials {
     padding-top: .6rem;
     padding-bottom: .6rem;
-    margin-left: auto;
-    margin-right: auto;
-    width: 70%;
+    width: 100%;
     display: flex;
     justify-content: space-evenly;
     font-size: 1.3rem;
@@ -1236,7 +1237,6 @@ https://www.geeksforgeeks.org/how-to-create-fade-in-effect-on-page-load-using-cs
 .allauth-form-inner-content {
     margin-top: 3rem;
     width: 100%;
-    height: 100vh;
 }
 
 
