--- a/templates/base.html
+++ b/templates/base.html
@@ -29,14 +29,14 @@
     rel="stylesheet">
   <link rel="stylesheet" href="{% static 'css/base.css' %}">
 
-   <!-- Favicon -->
-   <link rel="apple-touch-icon" sizes="76x76" href="{% static 'favicon/apple-touch-icon.png' %}">
-   <link rel="icon" type="image/png" sizes="32x32" href="{% static 'favicon/favicon-32x32.png' %}">
-   <link rel="icon" type="image/png" sizes="16x16" href="{% static 'favicon/favicon-16x16.png' %}">
-   <link rel="manifest" href="{% static 'favicon/site.webmanifest' %}">
-   <link rel="mask-icon" href="{% static 'favicon/safari-pinned-tab.svg' %}" color="#5bbad5">
-   <meta name="msapplication-TileColor" content="#da532c">
-   <meta name="theme-color" content="#ffffff">
+  <!-- Favicon -->
+  <link rel="apple-touch-icon" sizes="76x76" href="{% static 'favicon/apple-touch-icon.png' %}">
+  <link rel="icon" type="image/png" sizes="32x32" href="{% static 'favicon/favicon-32x32.png' %}">
+  <link rel="icon" type="image/png" sizes="16x16" href="{% static 'favicon/favicon-16x16.png' %}">
+  <link rel="manifest" href="{% static 'favicon/site.webmanifest' %}">
+  <link rel="mask-icon" href="{% static 'favicon/safari-pinned-tab.svg' %}" color="#5bbad5">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#ffffff">
 
   {% endblock %}
 
@@ -128,7 +128,7 @@
               {% else %}
               <a href="{% url 'account_signup' %}" class="dropdown-item purple-text">Register</a>
               <a href="{% url 'account_login' %}" class="dropdown-item purple-text"><strong>Login</strong></a>
-              
+
               {% endif %}
             </div>
           </li>
@@ -218,13 +218,17 @@
 
     <div class="footer-socials">
 
-      <a class="text-white" href="https://wwww.facebook.com" rel="nofollow" target="_blank" aria-label="visit our Facebook page"><i class="fa-brands fa-facebook"></i></a>
+      <a class="text-white" href="https://wwww.facebook.com" rel="nofollow" target="_blank"
+        aria-label="visit our Facebook page"><i class="fa-brands fa-facebook"></i></a>
 
-      <a class="text-white" href="https://www.instagram.com" rel="nofollow" target="_blank" aria-label="visit our Instagram page"><i class="fa-brands fa-instagram"></i></a>
+      <a class="text-white" href="https://www.instagram.com" rel="nofollow" target="_blank"
+        aria-label="visit our Instagram page"><i class="fa-brands fa-instagram"></i></a>
 
-      <a class="text-white" href="https://www.x.com" rel="nofollow" target="_blank" aria-label="visit our X page"><i class="fa-brands fa-x-twitter"></i></a>
+      <a class="text-white" href="https://www.x.com" rel="nofollow" target="_blank" aria-label="visit our X page"><i
+          class="fa-brands fa-x-twitter"></i></a>
 
-      <a class="text-white" href="https://www.tiktok.com" rel="nofollow" target="_blank" aria-label="visit our Tiktok page"><i class="fa-brands fa-tiktok"></i></a>
+      <a class="text-white" href="https://www.tiktok.com" rel="nofollow" target="_blank"
+        aria-label="visit our Tiktok page"><i class="fa-brands fa-tiktok"></i></a>
 
     </div>
 
@@ -248,10 +252,10 @@
         </p>
       </div>
 
-      </div>
+    </div>
 
 
-      <!-- <p class="float-end">
+    <!-- <p class="float-end">
       </p>
 
       <p>&copy; 2024 Chocelegance B.V. &middot; 
@@ -264,8 +268,6 @@
         target="_blank"
         aria-label="go to three oaks facebook page (opens in new window)">Facebook</a>
       </p> -->
-
-    </div>
   </footer>
 
   <!-- Block for additional JS when required -->
