--- a/templates/base.html
+++ b/templates/base.html
@@ -236,19 +236,25 @@
 
       <div class="newsletter-signup">
         <p>
-          Sign up to our newsletter!
+          Sign up to our newsletter below!
         </p>
       </div>
 
       <div>
         <p>
-          Privacy policy
+          Our privacy policy
         </p>
       </div>
 
       <div>
         <p>
           Terms & Conditions
+        </p>
+      </div>
+
+      <div>
+        <p>
+          Cacao-Trace &reg; Partner
         </p>
       </div>
 
