--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1512,6 +1512,10 @@ https://www.geeksforgeeks.org/how-to-create-fade-in-effect-on-page-load-using-cs
         margin-left: auto;
         margin-right: auto;
     }
+
+    .footer-content {
+        font-size: .9rem;
+    }
 }
 
 @media (min-width: 1100px) {
