Change layout of main button in 404 page

--- a/templates/errors/404.html
+++ b/templates/errors/404.html
@@ -17,12 +17,11 @@
                 </h1>
                 <p class="display-4 purple-text">That page doesn't exist..</p>
                 <div class="treat-yourself-button my-5">
-                    <h4>
-                        <a href="{% url 'chocolates' %}" 
-                            class="shop-now-button">
+                    <p>
+                        <a href="{% url 'chocolates' %}">
                                 Back to Chocolates
                         </a>
-                    </h4>
+                    </p>
                 </div>
             </div>
         </div>
