Revert changes made to email settings in settings.py

--- a/templates/errors/404.html
+++ b/templates/errors/404.html
@@ -11,12 +11,12 @@
     </div>
     <div class="container h-100">
         <div class="row h-100">
-            <div class="col-7 col-md-6 my-auto">
-                <h1 class="display-4 purple-text">
+            <div class="col-7 col-md-6 mt-5">
+                <h1 class="purple-text">
                     Oops!
                 </h1>
-                <p class="display-4 purple-text">That page doesn't exist..</p>
-                <div class="treat-yourself-button my-5">
+                <h2 class="purple-text">That page doesn't exist..</h2>
+                <div class="treat-yourself-button mt-5">
                     <p>
                         <a href="{% url 'chocolates' %}">
                                 Back to Chocolates
