--- a/templates/errors/404.html
+++ b/templates/errors/404.html
@@ -9,7 +9,7 @@
             <div class="col"></div>
         </div>
     </div>
-    <div class="container h-100">
+    <div class="container">
         <div class="row h-100">
             <div class="col-7 col-md-6 mt-5">
                 <h1 class="purple-text">
