Add seo description and keywords to meta elements in head of base.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,11 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+  <!-- SEO Keywords -->
+  <meta name="description" content="Chocelegance, we make hand crafted, organic, vegan, keto friendly and gluten-free chocolates for diet conscious chocolate lovers">
+  <meta name="keywords" content="chocs, cocoa, dark chocolate, milk chocolate, white chocolate, natural, love, present, dietary, nutrition, delicious, artisan, craft, treat yourself with chocolate, valentine's day gift, healthy chocolates, hand crafted chocolates"
+
   {% endblock %}
 
   {% block extra_meta %}
@@ -253,9 +258,9 @@
       </div>
 
       <div>
-        <p>
-          Cacao-Trace &reg; Partner
-        </p>
+
+        <a class="text-white" href="https://www.cacao-trace.com" rel="nofollow" target="_blank"
+        aria-label="visit the cacao-trace site">Cacao-Trace &reg; Ethical Partner</a>
       </div>
 
     </div>
