Change rel of cacao-trace link to sponsored in base.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
 
   <!-- SEO Keywords -->
   <meta name="description" content="Chocelegance, we make hand crafted, organic, vegan, keto friendly and gluten-free chocolates for diet conscious chocolate lovers">
-  <meta name="keywords" content="chocs, cocoa, dark chocolate, milk chocolate, white chocolate, natural, love, present, dietary, nutrition, delicious, artisan, craft, treat yourself with chocolate, valentine's day gift, healthy chocolates, hand crafted chocolates"
+  <meta name="keywords" content="chocs, cocoa, dark chocolate, milk chocolate, white chocolate, natural, love, present, dietary, nutrition, delicious, artisan, craft, treat yourself with chocolate, valentine's day gift, healthy chocolates, hand crafted chocolates, protein, pure, non-gmo, plant based, foody, allergy, niche, chocolatier, veganism, bio, gluten, coeliac, keto friendly diet, guilt free, luxury chocolate, high quality chocolates, buy romantic gift, all natural ingredients, vegan friendly, romance, anniversary, sweet and tasty treats">
 
   {% endblock %}
 
@@ -259,7 +259,7 @@
 
       <div>
 
-        <a class="text-white" href="https://www.cacao-trace.com" rel="nofollow" target="_blank"
+        <a class="text-white" href="https://www.cacao-trace.com" rel="sponsored" target="_blank"
         aria-label="visit the cacao-trace site">Cacao-Trace &reg; Ethical Partner</a>
       </div>
 
