Add privacy policy page to site

--- a/templates/base.html
+++ b/templates/base.html
@@ -246,9 +246,10 @@
       </div>
 
       <div>
-        <p>
-          Our privacy policy
-        </p>
+        <a class="text-white" href="{% url 'privacy' %}" 
+        aria-label="visit our privacy policy page">
+          Privacy policy
+        </a>
       </div>
 
       <div>
@@ -258,9 +259,10 @@
       </div>
 
       <div>
-
         <a class="text-white" href="https://www.cacao-trace.com" rel="sponsored" target="_blank"
-        aria-label="visit the cacao-trace site">Cacao-Trace &reg; Ethical Partner</a>
+        aria-label="visit the cacao-trace site">
+          Cacao-Trace &reg; Ethical Partner
+        </a>
       </div>
 
     </div>
