Add terms and conditions page to site

--- a/home/templates/home/privacy.html
+++ b/home/templates/home/privacy.html
@@ -1,7 +1,7 @@
 <!-- This template is extended from the main base.html file located in the root templates directory -->
 {% extends "base.html" %}
 {% load static %}
-{% block extra_title %} Home{% endblock %}
+{% block extra_title %} Privacy Policy{% endblock %}
 
 <!-- Additional sub-header block below main header, extended from base.html -->
 {% block page_header %}
