Add url for terms page in base.html

--- a/home/templates/home/terms.html
+++ b/home/templates/home/terms.html
@@ -20,7 +20,7 @@
 
 <div class="purple-text mt-5">
 
-    <h2 style="text-align: center;"><b>TERMS AND CONDITIONS</b></h2>
+    <h2 style="text-align: center;"><b class="bright-purple-text">TERMS AND CONDITIONS</b></h2>
     <p>Last updated: 2024-06-14</p>
     <p>1. <b>Introduction</b></p>
     <p>Welcome to <b>Chocelegance B.V.</b> (“Company”, “we”, “our”, “us”)!</p>
@@ -109,6 +109,8 @@
     <p>BY USING SERVICE OR OTHER SERVICES PROVIDED BY US, YOU ACKNOWLEDGE THAT YOU HAVE READ THESE TERMS OF SERVICE AND AGREE TO BE BOUND BY THEM.</p>
     <p>24. <b>Contact Us</b></p>
     <p>Please send your feedback, comments, requests for technical support by email: <b>contact@chocelegance.nl</b>.</p>
+    
+
     
 
 </div>
