--- a/templates/base.html
+++ b/templates/base.html
@@ -253,9 +253,10 @@
       </div>
 
       <div>
-        <p>
-          Terms & Conditions
-        </p>
+        <a class="text-white" href="{% url 'terms' %}" 
+        aria-label="visit our terms and conditions page">
+          Terms & conditions
+        </a>
       </div>
 
       <div>
