--- a/templates/base.html
+++ b/templates/base.html
@@ -221,7 +221,7 @@
   <!-- Footer -->
   <footer class="footer mt-5">
 
-    <div class="footer-socials">
+    <section class="footer-socials">
 
       <a class="text-white" href="https://wwww.facebook.com" rel="nofollow" target="_blank"
         aria-label="visit our Facebook page"><i class="fa-brands fa-facebook"></i></a>
@@ -235,15 +235,20 @@
       <a class="text-white" href="https://www.tiktok.com" rel="nofollow" target="_blank"
         aria-label="visit our Tiktok page"><i class="fa-brands fa-tiktok"></i></a>
 
-    </div>
+    </section>
 
-    <div class="footer-content">
+    
 
-      <div class="newsletter-signup">
+    <section class="footer-newsletter mx-auto text-center mt-1">
+      <div class="mx-auto">
         <p>
-          Sign up to our newsletter below!
+          Get exclusive offers and discount codes by subscribing to our monthly newsletter
         </p>
       </div>
+           <!-- Mailchimp signup form here -->       
+    </section>
+
+    <section class="footer-content">
 
       <div>
         <a class="text-white" href="{% url 'privacy' %}" 
@@ -266,22 +271,9 @@
         </a>
       </div>
 
-    </div>
+    </section>
 
 
-    <!-- <p class="float-end">
-      </p>
-
-      <p>&copy; 2024 Chocelegance B.V. &middot; 
-        <a class="" href="">Privacy
-        </a> &middot; 
-        <a class="" href="">Terms
-        </a> Follow us on 
-        <a class="text-white" href="https://wwww.facebook.com" 
-        rel="nofollow"
-        target="_blank"
-        aria-label="go to three oaks facebook page (opens in new window)">Facebook</a>
-      </p> -->
   </footer>
 
   <!-- Block for additional JS when required -->
