Adjust styling of main button on 404 error page

--- a/templates/errors/404.html
+++ b/templates/errors/404.html
@@ -15,8 +15,8 @@
                 <h1 class="purple-text">
                     Oops!
                 </h1>
-                <h2 class="purple-text">That page doesn't exist..</h2>
-                <div class="treat-yourself-button mt-5">
+                <h2 class="purple-text mt-3">That page doesn't exist..</h2>
+                <div class="error404button mt-5">
                     <p>
                         <a href="{% url 'chocolates' %}">
                                 Back to Chocolates
