--- a/static/css/base.css
+++ b/static/css/base.css
@@ -342,6 +342,36 @@ input[id="id-save-info"] {
     font-size: 1rem;
 }
 
+.error404button {
+    font-size: 1.2rem !important;
+    width: 15rem;
+    position: relative;
+    top: 45%;
+    left: 0%;
+    background: #551b8c;
+    border-radius: 15px;
+    transition: all 0.2s ease-in-out;
+    border: 1px solid #882bde;
+    box-shadow: 0px 0px 15px #ed82ed;
+}
+
+
+.error404button:hover {
+    background: #c71585;
+    border: 1px solid #ed82ed;
+    box-shadow: 0px 0px 20x #ed82ed;
+}
+
+.error404button a {
+    padding-top: .8rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.2rem;
+    color: white;
+    text-decoration: none;
+    font-weight: 100;
+}
 
 
 /* ------------------------------------------------------------------------------------------------------------------------------ FREE DELIVERY BANNER STYLING */
