Adjust styling of footer in base.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -219,7 +219,7 @@
   {% endblock %}
 
   <!-- Footer -->
-  <footer class="footer mt-5">
+  <footer class="footer">
 
     <section class="footer-socials">
 
@@ -239,7 +239,7 @@
 
     
 
-    <section class="footer-newsletter mx-auto text-center mt-1">
+    <section class="footer-newsletter mx-auto text-center">
       <div class="mx-auto">
         <p>
           Get exclusive offers and discount codes by subscribing to our monthly newsletter
