--- a/static/css/base.css
+++ b/static/css/base.css
@@ -182,29 +182,19 @@ https://www.geeksforgeeks.org/how-to-create-fade-in-effect-on-page-load-using-cs
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     color: white;
-    height: 9rem;
-    padding-top: .3rem;
-    margin-top: 6rem !important;
+    height: 6.5rem;
+    padding-top: .4rem;
+    margin-top: 5rem !important;
     padding-left: .7rem;
     padding-right: .7rem;
 }
-
-.footer-content {
-    padding-left: .7rem;
-    padding-right: .7rem;
-    width: 100%;
-    display: flex;
-    justify-content: space-around;
-}
-
 
 .footer-socials {
-    padding-top: .6rem;
-    padding-bottom: .6rem;
     width: 100%;
     display: flex;
     justify-content: space-evenly;
-    font-size: 1.3rem;
+    font-size: 1rem;
+    padding-bottom: .2rem !important;
 }
 
 .footer-socials i:hover {
@@ -218,7 +208,24 @@ https://www.geeksforgeeks.org/how-to-create-fade-in-effect-on-page-load-using-cs
 .footer-newsletter {
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: .2rem !important;
 }
+
+.footer-newsletter p {
+    margin-bottom: 0rem !important;
+}
+
+.footer-content {
+    padding-top: 0rem !important;
+    padding-left: .7rem;
+    padding-right: .7rem;
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+}
+
+
+
 
 
 
@@ -370,7 +377,7 @@ input[id="id-save-info"] {
     font-size: 1.2rem;
     color: white;
     text-decoration: none;
-    font-weight: 100;
+    font-weight: 300;
 }
 
 
