Add mobile_quantity_form.html to cart app to resolve duplicate id error

--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -80,7 +80,7 @@
 
                 <!-- Quantity form -->
                 <div class="col-12 col-sm-6">
-                    {% include "cart/quantity_form.html" %}
+                    {% include "cart/mobile_quantity_form.html" %}
                 </div>
                 <div class="row">
                     <div class="col">
