--- a/cart/templates/cart/mobile_quantity_form.html
+++ b/cart/templates/cart/mobile_quantity_form.html
@@ -36,5 +36,5 @@
 <!-- Form ends above this line, from quantity-form.html -->
 <a class="update-link text-success"><small>Update</small></a>
 <a class="remove-item text-danger float-right"
-    id="standard_remove_{{ item.item_id }}"><small>Remove</small></a>
+    id="mobile_remove_{{ item.item_id }}"><small>Remove</small></a>
 </div>
