--- a/static/css/base.css
+++ b/static/css/base.css
@@ -187,6 +187,7 @@ https://www.geeksforgeeks.org/how-to-create-fade-in-effect-on-page-load-using-cs
     margin-top: 5rem !important;
     padding-left: .7rem;
     padding-right: .7rem;
+    z-index: -1;
 }
 
 .footer-socials {
