Add strong emphasis to short-tail seo keyword in index.html

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -58,7 +58,7 @@
 <div class="testimonial-header">
     <h3 class="purple-text text-center font-weight-bold mt-5">Testimonials</h3>
     <p class="purple-text text-center mt-3">
-        We like to think we offer the best hand crafted, <strong class="bright-purple-text">diet friendly</strong> chocolates in town. But we also think that self
+        We like to think we offer the best <strong class="bright-purple-text">hand crafted</strong>, <strong class="bright-purple-text">diet friendly</strong> chocolates in town. But we also think that self
         praise, is no praise...
     </p>
     <p class="purple-text text-center mt-1">
