--- a/static/css/base.css
+++ b/static/css/base.css
@@ -353,7 +353,6 @@ input[id="id-save-info"] {
 }
 
 .error404button {
-    font-size: 1.2rem !important;
     width: 15rem;
     position: relative;
     top: 45%;
@@ -369,7 +368,7 @@ input[id="id-save-info"] {
 .error404button:hover {
     background: #c71585;
     border: 1px solid #ed82ed;
-    box-shadow: 0px 0px 20x #ed82ed;
+    box-shadow: 0px 0px 15pxx #ed82ed;
 }
 
 .error404button a {
@@ -377,7 +376,7 @@ input[id="id-save-info"] {
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 1.2rem;
+    font-size: 1.4rem;
     color: white;
     text-decoration: none;
     font-weight: 300;
