--- a/static/css/base.css
+++ b/static/css/base.css
@@ -247,15 +247,10 @@ https://www.geeksforgeeks.org/how-to-create-fade-in-effect-on-page-load-using-cs
 #mc-embedded-subscribe-form {
     margin: .2rem !important;
 }
-/* #mc_embed_signup {
-    padding-top: .3rem;
-    border: none;
-    text-align: center;
-    width: 100%;
-}  */
 
-/* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
-    We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+.mc-field-group {
+    max-width: 600px;
+}
 
 
 #mc_embed_signup div.response {
@@ -282,7 +277,6 @@ https://www.geeksforgeeks.org/how-to-create-fade-in-effect-on-page-load-using-cs
     color: white !important;
 }
 
-/* positions input field horizontally */
 #mc_embed_signup_scroll {
     display: inline-block !important;
 } 
@@ -291,14 +285,6 @@ https://www.geeksforgeeks.org/how-to-create-fade-in-effect-on-page-load-using-cs
     color: #551b8c;
     opacity: .6;
 }
-
-
-
-
-/* Custom */
-/* Signup form container */
-
-
 
 
 /* Input Styles */
@@ -345,20 +331,6 @@ https://www.geeksforgeeks.org/how-to-create-fade-in-effect-on-page-load-using-cs
     box-shadow: 0 0px 10px #ed82ed !important;
     text-decoration: none !important;
 } 
-
-:-webkit-input-placeholder { color: #ABB0B2 ; } /* WebKit browsers */ 
-:-moz-placeholder { color: #ABB0B2 ; } /* Mozilla Firefox 4 to 18 */
-::-moz-placeholder { color: #ABB0B2 ; } /* Mozilla Firefox 19+ */
-:-ms-input-placeholder { color: #ABB0B2 ; } /* Internet Explorer 10+ */
-
-@media (max-width: 768px) { /* positions input field and button underneath each other with 100% width for tablet and mobile */
-  
-/* .mc-field-group { display: block; max-width: 100%; }
-#mce-EMAIL { padding: .7em 0 .7em 1em; width: 96%; margin: 0; }
-.clear { display: block; width: 100% }
-.button { width: 40%; margin: .5em 0 0 0; } */
-  
-}
 
 
 
@@ -1697,10 +1669,16 @@ https://www.geeksforgeeks.org/how-to-create-fade-in-effect-on-page-load-using-cs
         margin-right: auto;
     }
 
+    .footer {
+        height: 15.5rem;
+    }
+
     .footer-socials {
+        font-size: 1.3rem !important;
         margin-left: auto;
         margin-right: auto;
         width: 70%;
+        margin-bottom: .6rem;
     }
 
     .footer-content {
@@ -1710,6 +1688,7 @@ https://www.geeksforgeeks.org/how-to-create-fade-in-effect-on-page-load-using-cs
         font-size: .9rem;
         padding-left: 0;
         padding-right: 0;
+        margin-top: .7rem;
     }
 
     .footer-newsletter {
