--- a/templates/base.html
+++ b/templates/base.html
@@ -271,7 +271,7 @@
                 <div class="optionalParent">
                   <div class="clear foot">
                     <input type="submit" name="subscribe" id="mc-embedded-subscribe" class="button" value="Subscribe">
-                    <p style="margin: 0px auto;"><a href="http://eepurl.com/iR3FwM"
+                    <p style="margin-left: .6rem"><a href="http://eepurl.com/iR3FwM"
                         title="Mailchimp - email marketing made easy and fun"><span
                           style="display: inline-block; background-color: white; border-radius: 4px;"><img
                             class="refferal_badge"
