Add seo meta tags description to readme.md

--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
 
   <!-- SEO Keywords -->
   <meta name="description"
-    content="Chocelegance, we make hand crafted, organic, vegan, keto friendly and gluten-free chocolates for diet conscious chocolate lovers">
+    content="Chocelegance, we make hand crafted, organic, vegan, keto friendly and gluten-free chocolates for diet conscious chocolate lovers, it's time to treat yoruself!">
   <meta name="keywords"
     content="chocs, cocoa, dark chocolate, milk chocolate, white chocolate, natural, love, present, dietary, nutrition, delicious, artisan, craft, treat yourself with chocolate, valentine's day gift, healthy chocolates, hand crafted chocolates, protein, pure, non-gmo, plant based, foody, allergy, niche, chocolatier, veganism, bio, gluten, coeliac, keto friendly diet, guilt free, luxury chocolate, high quality chocolates, buy romantic gift, all natural ingredients, vegan friendly, romance, anniversary, sweet and tasty treats">
 
