--- a/templates/base.html
+++ b/templates/base.html
@@ -254,23 +254,30 @@
               action="https://herokuapp.us17.list-manage.com/subscribe/post?u=6debefe32746ae4fb58cf7629&amp;id=d65eb2c650&amp;f_id=0041c2e1f0"
               method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
               target="_blank">
+
               <div id="mc_embed_signup_scroll">
                 <p>Subscribe to our newsletter for discounts and promotions!</p>
-                <div class="mc-field-group"><label for="mce-EMAIL">Email Address (required) <span
-                      class="asterisk">*</span></label><input type="email" name="EMAIL" class="required email"
-                    id="mce-EMAIL" required="" value="" placeholder="Enter email address (required)"></div>
+
+                <div class="mc-field-group">
+                  <input type="email" name="EMAIL" class="required email" id="mce-EMAIL" required="" value="" placeholder="Enter email address (required)">
+                </div>
+
                 <div id="mce-responses" class="clear foot">
                   <div class="response" id="mce-error-response" style="display: none;"></div>
                   <div class="response" id="mce-success-response" style="display: none;"></div>
                 </div>
+
                 <div style="position: absolute; left: -5000px;" aria-hidden="true">
                   <!-- /* real people should not fill this in and expect good things - do not remove this or risk form bot
                   signups */ -->
                   <input type="text" name="b_6debefe32746ae4fb58cf7629_d65eb2c650" tabindex="-1" value="">
                 </div>
+
                 <div class="optionalParent">
                   <div class="clear foot">
+
                     <input type="submit" name="subscribe" id="mc-embedded-subscribe" class="button" value="Subscribe">
+
                     <p style="margin-left: .6rem"><a href="http://eepurl.com/iR3FwM"
                         title="Mailchimp - email marketing made easy and fun"><span
                           style="display: inline-block; background-color: white; border-radius: 8px;"><img
@@ -282,28 +289,9 @@
                   </div>
                 </div>
               </div>
+
             </form>
           </div>
-          <script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script>
-          <script type="text/javascript">
-            (function ($) {
-              window.fnames = new Array();
-              window.ftypes = new Array();
-              fnames[0] = 'EMAIL';
-              ftypes[0] = 'email';
-              fnames[1] = 'FNAME';
-              ftypes[1] = 'text';
-              fnames[2] = 'LNAME';
-              ftypes[2] = 'text';
-              fnames[3] = 'ADDRESS';
-              ftypes[3] = 'address';
-              fnames[4] = 'PHONE';
-              ftypes[4] = 'phone';
-              fnames[5] = 'BIRTHDAY';
-              ftypes[5] = 'birthday';
-            }(jQuery));
-            var $mcj = jQuery.noConflict(true);
-          </script>
         </div>
 
 
