Adjust layout of footer on mobile screens

--- a/templates/base.html
+++ b/templates/base.html
@@ -256,7 +256,7 @@
               target="_blank">
 
               <div id="mc_embed_signup_scroll">
-                <p>Subscribe to our newsletter for discounts and promotions!</p>
+                <p>Subscribe to our newsletter for discounts & promotions!</p>
 
                 <div class="mc-field-group">
                   <input type="email" name="EMAIL" class="required email" id="mce-EMAIL" required="" value="" placeholder="Enter email address (required)">
