--- a/about/templates/about/about.html
+++ b/about/templates/about/about.html
@@ -76,6 +76,16 @@
         </div>
     </div>
 
+    <div class="about-container col-12 mt-5 col-sm-10 offset-sm-1 col-md-10 offset-md-1 col-lg-8 offset-lg-2">
+        <h2 class="purple-text text-center">Contact</h2>
+        <br>
+        <p class="purple-text">
+            The fastest way to reach us is by <strong>phone</strong>: <span class="bright-purple-text">+31 6 321 9876 54321</span>.
+            <br><br>
+            Alternatively, the most popular way to reach us is by <strong>email</strong>: <span class="bright-purple-text">contact@chocelegance.com</span> (we usually respond within 24 hours).
+        </p>
+    </div>
+
     <!-- FAQ Accordion container -->
     <div class="faq-container col-12 col-sm-10 offset-sm-1 col-md-10 offset-md-1 col-lg-8 offset-lg-2">
         <div class="faq-text mt-5">
