--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -16,7 +16,7 @@
             </div>
         </a>
         <!-- DTL logic to give user based options to log in, from mobile-top-header.html. -->
-        <div class="dropdown-menu border-purple" aria-labelledby="user-options">
+        <div class="dropdown-menu pr-1 border-purple" aria-labelledby="user-options">
             {% if request.user.is_authenticated %}
             {% if request.user.is_superuser %}
             <a href="{% url 'add_chocolate' %}" class="dropdown-item purple-text">Chocolate Management</a>
