Update introduction section in readme

--- a/chocolates/templates/chocolates/chocolates.html
+++ b/chocolates/templates/chocolates/chocolates.html
@@ -191,7 +191,7 @@
             </div>
             {% else %}
                 {% if user.is_superuser %}
-                <h4 class="purple-text text-center mt-5">There are not chocolates saved to the database.<br><br>Please use the Chocolate Management menu to add some.</h4>
+                <h4 class="purple-text text-center mt-5">There are no chocolates saved to the database.<br><br>Please use the Chocolate Management menu to add some.</h4>
                 {% else %}
                 <h4 class="purple-text text-center mt-5">There are currently no chocolates ready!<br><br>We're making them as quickly as possible, please check back soon..</h4>
                 {% endif %}
