Add admin panel link to nav dropdown menu for superusers

--- a/about/templates/about/about.html
+++ b/about/templates/about/about.html
@@ -82,7 +82,7 @@
         <p class="purple-text">
             The fastest way to reach us is by <strong>phone</strong>: <span class="bright-purple-text">+31 6 321 9876 54321</span>.
             <br><br>
-            Alternatively, the most popular way to reach us is by <strong>email</strong>: <span class="bright-purple-text">contact@chocelegance.com</span> (we usually respond within 24 hours).
+            Alternatively, the most popular way to reach us is by <strong>email</strong>: <span class="bright-purple-text">contact@chocelegance.nl</span> (we usually respond within 24 hours).
         </p>
     </div>
 
